# fit_pal

./: .gitignore  GRAPH_ARCHITECTURE.md  PRD.md  README.md  draft_prd.md  evaluate_lookup.ipynb  execution_report.md  inspect_data.py  inspect_memory.py  inspect_schema.py  langgraph.json  main.py  phase_2_scatch.md  pyproject.toml  test_agent_flow.py  trace.json  visualize_graph.py
Take_Aweys/: planning_insights.md
commit_logs/: 2026-02-04_21-15-00_feat-init-project-and-ingest-db.md  2026-02-04_23-30-00_consolidate_architecture.md  2026-02-05_08-35-00_feat_lookup_tools.md  2026-02-06_14-34-00_integrated_simple_db.md  2026-02-06_14-38-00_cleanup_structure.md  2026-02-06_14-41-00_track_logs_prompts.md  2026-02-09_22-16-41_feat-input-parser-node.md  2026-02-10_08-52-41_chore-cleanup-scripts.md  2026-02-10_input_parser_refactor.md  2026-02-12_00-06-00_plan-daily-log-persistence.md  2026-02-12_10-54-00_feat-daily-log-persistence.md  2026-02-12_12-27-00_docs-prd-update-agent-selection-plan.md  2026-02-12_13-19-36_feat-agent-selection-node.md  2026-02-12_17-27-00_langraph-state-management-docs.md  2026-02-13_12-59-00_refactor-state-schema-multi-item-loop.md  2026-02-15_23-40-50_implement-calculate-log-node.md  2026-02-17_18-11-00_feat-multi-item-feedback.md  2026-02-18_00-25-00_feat-stats-lookup-node.md  2026-02-20_13-44-00_feat-response-node.md  2026-02-20_14-00-00_docs-sync.md  2026-02-21_00-36-09_refactor_studio_schemas.md  2026-02-21_21-00-14_refactor-llm-configuration.md  2026-02-22_23-20-00_refactor-config-kwargs.md  2026-02-23_10-24-58_migrate-db-layer-to-async.md  (+5 more)
(+95 files in other folders)
